Changes in PaginationService class
instead of returning List<Events> , now im returning Page<Events> , also from the repository , so i can directly access the number of the total pages , other wise with the old implementation , we couldnt extract the correct number/size.